Fixed autocomplete from overflowing its container

--- a/src/less/addons/autocomplete.less
+++ b/src/less/addons/autocomplete.less
@@ -27,16 +27,21 @@
  ========================================================================== */
 
 /*
- * 1. Behave like form elements
- * 2. Create position context for dropdowns
+ * 1. Container width fits its content
+ * 2. Create position context
+ * 3. Prevent `inline-block` consequences
+ * 4. Remove the gap between the container and its child element
  */
 
 .uk-autocomplete {
     /* 1 */
     display: inline-block;
-    vertical-align: middle;
     /* 2 */
     position: relative;
+    /* 3 */
+    max-width: 100%;
+    /* 4 */
+    vertical-align: middle;
 }
 
 
