--- a/src/less/addons/form-password.less
+++ b/src/less/addons/form-password.less
@@ -22,9 +22,18 @@
    Component: Form password
  ========================================================================== */
 
+/*
+ * 1. Container width fits its content
+ * 2. Create position context
+ * 3. Prevent `inline-block` consequences
+ */
+
 .uk-form-password {
-    position: relative;
+    /* 1 */
     display: inline-block;
+    /* 2 */
+    position: relative;
+    /* 3 */
     max-width: 100%;
 }
 
