--- a/src/less/base.less
+++ b/src/less/base.less
@@ -175,18 +175,18 @@ dfn[title] {
  ========================================================================== */
 
 /*
- * 1. Corrects max-width behavior (2.) if padding and border are used
- * 2. Responsiveness: Sets a maximum width relative to the parent and auto scales the height
+ * 1. Responsiveness: Sets a maximum width relative to the parent and auto scales the height
+ * 2. Corrects `max-width` behavior if padding and border are used
  * 3. Remove the gap between images and the bottom of their containers
  */
 
 img {
     /* 1 */
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    /* 2 */
     max-width: 100%;
     height: auto;
+    /* 2 */
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
     /* 3 */
     vertical-align: middle;
 }
